# pypress

./: .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  requirements.txt
workspace/: entrypoint.cfg  setup.cfg
workspace/src/pypress/: hello.py
workspace/tests/: test_hello.py
