[metadata]
name = pypress
version = attr: pypress.__version__
author = matsuura
author_email = matsuura0831@gmail.com
url = https://github.com/matsuura0831
description = Markdown site generator
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir =
  = src
packages = find:
entry_points = file: entrypoint.cfg
;install_requires =
;  numpy
;  pandas
;  matplotlib
;  docopt
;  keras
;  opencv-python
;  SQLalchemy
setup_requires =
  pytest-runner
tests_require =
  pytest
  pytest-cov

[options.packages.find]
where=src

[aliases]
test = pytest   # python setup.py test > python setup.py pytest

[tool:pytest]
python_files = tests/test_*.py
addopts = --cov=pypress --cov-report=html

[coverage:run]
branch = True
source =
  repro
omit =
  */__init__.py

[coverage:report]
#skip_empty = true
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.: